<resources>
    <string name="app_name">Pixeloid</string>

    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="unit">Unit</string>
    <string name="type">Type</string>
    <string name="type_int">Integer</string>
    <string name="type_float">Float</string>
    <string name="color">Color</string>
    <string name="timezone">Time Zone</string>
    <string name="done">Done</string>
    <string name="users">Users</string>
    <string name="username">User Name</string>
    <string name="token">Token</string>
    <string name="login">Login</string>
    <string name="open_graph">Open the graph</string>

    <string name="empty_result">No results found</string>
    <string name="load_fail">Loading failed.</string>
    <string name="query_successful">Request sent successfully!</string>
    <string name="query_fail">Request failed.</string>
</resources>
