<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="java.util.List" />

        <import type="net.paltee.pixeloid.binding.BindingAdapters" />

        <variable
            name="graph"
            type="net.paltee.pixeloid.model.Graph" />

        <variable
            name="colorList"
            type="List&lt;String>" />

        <variable
            name="selectedColorIndex"
            type="int" />

        <variable
            name="doneCallback"
            type="android.view.View.OnClickListener" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/list_item_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/id"
                        android:inputType="textVisiblePassword"
                        android:text="@={graph.id}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/row_margin">

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:text="@={graph.name}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/row_margin">

                    <EditText
                        android:id="@+id/unit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/unit"
                        android:text="@={graph.unit}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/row_margin">

                    <EditText
                        android:id="@+id/timezone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/timezone"
                        android:text="@={graph.timezone}" />
                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/row_margin">

                    <TextView
                        android:id="@+id/type_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/text_margin"
                        android:text="@string/type" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/type_text"
                        android:checkedButton="@={BindingAdapters.toGraphTypeId(graph.type)}"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/type_int"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/type_int" />

                        <RadioButton
                            android:id="@+id/type_float"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/type_float" />
                    </RadioGroup>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/row_margin">

                    <TextView
                        android:id="@+id/color_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/text_margin"
                        android:text="@string/color" />

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/color_text"
                        android:entries="@array/graph_colors"
                        android:selectedItemPosition="@={BindingAdapters.toGraphColorIndex(graph.color)}">

                    </Spinner>
                </RelativeLayout>

                <Button
                    style="@style/PrimaryButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/section_margin"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:onClick="@{doneCallback}"
                    android:text="@string/done" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</layout>
